fix: 330 - no gap in merch section

--- a/src/widgets/merch/ui/merch.scss
+++ b/src/widgets/merch/ui/merch.scss
@@ -1,5 +1,7 @@
 .merch {
   &.content {
+    gap: 50px;
+
     @include media-laptop {
       flex-direction: column;
     }
